src/test/ui/symbol-names/impl1.stderr
error: symbol-name(_ZN5impl13foo3Foo3bar17he53b9bee7600ed8dE)
  --> $DIR/impl1.rs:8:9
   |
LL |         #[rustc_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^

error: demangling(impl1::foo::Foo::bar::he53b9bee7600ed8d)
  --> $DIR/impl1.rs:8:9
   |
LL |         #[rustc_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(impl1::foo::Foo::bar)
  --> $DIR/impl1.rs:8:9
   |
LL |         #[rustc_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^

error: def-path(foo::Foo::bar)
  --> $DIR/impl1.rs:12:9
   |
LL |         #[rustc_def_path]
   |         ^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN5impl13bar33_$LT$impl$u20$impl1..foo..Foo$GT$3baz17h86c41f0462d901d4E)
  --> $DIR/impl1.rs:21:9
   |
LL |         #[rustc_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^

error: demangling(impl1::bar::<impl impl1::foo::Foo>::baz::h86c41f0462d901d4)
  --> $DIR/impl1.rs:21:9
   |
LL |         #[rustc_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(impl1::bar::<impl impl1::foo::Foo>::baz)
  --> $DIR/impl1.rs:21:9
   |
LL |         #[rustc_symbol_name]
   |         ^^^^^^^^^^^^^^^^^^^^

error: def-path(bar::<impl foo::Foo>::baz)
  --> $DIR/impl1.rs:25:9
   |
LL |         #[rustc_def_path]
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

